# StockForcasting

./: LICENSE  README.md  pyproject.toml
src/StockForcasting/defs/assets/: __init__.py  cleaning.py  ingestion.py  modeling.py  transformation.py
src/StockForcasting/defs/partition_defs/: partition_def.py
src/StockForcasting/defs/resources/: minio_io_manager.py  psql_io_manager.py
src/StockForcasting/defs/tickers/: tickers.csv
